<resources>
    <string name="app_name">백수탈출 넘버원</string>
    <string name="choose">-선택-</string>
    <string name="edit_my_info">개인 정보 수정</string>
    <string name="name">이름</string>
    <string name="name_temp">임수연</string>
    <string name="id">아이디</string>
    <string name="limlean590">limlean590</string>
    <string name="university">대학</string>
    <string name="search">-찾기-</string>
    <string name="major">전공</string>
    <string name="type_of_company">회사종류</string>
    <string name="duty">희망직무</string>
    <string name="company">희망회사</string>
    <string name="enter_company">희망회사 입력</string>
    <string name="gender">성별</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="birthday">생년월일</string>
    <string name="toeic_score">토익점수</string>
    <string name="enter_toeic_score">토익점수 입력</string>
    <string name="certificate">자격증</string>
    <string name="add">-추가-</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="find_university">대학교 찾기</string>
    <string name="ok">확인</string>
    <string name="add_certs">자격증 추가</string>
    <string name="find_company">회사 찾기</string>
    <string name="input_extra_info">추가 정보 입력</string>
    <string name="skip">건너뛰기</string>
    <string name="gpa">학점</string>
    <string name="work_exp">대표경력사항</string>
    <string name="company_exp">근무기관명</string>
</resources>
