<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mint">

    <RelativeLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/mint"
        android:padding="20dp">

        <TextView
            android:id="@+id/title_register_extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/input_extra_info"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/uni_extra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/title_register_extra"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/uni_extra_input"
            android:text="@string/university"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/uni_extra_input"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/title_register_extra"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:hint="@string/search"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="@color/light_gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/major_extra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/uni_extra"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/major"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_major"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/uni_extra"
            android:background="@android:color/white"
            android:drawSelectorOnTop="true"
            android:padding="10dp"
            android:prompt="@string/choose" />

        <TextView
            android:id="@+id/comp_type_extra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/major_extra"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/type_of_company"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_company_type"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/major_extra"
            android:background="@android:color/white"
            android:drawSelectorOnTop="true"
            android:padding="10dp"
            android:prompt="@string/choose" />

        <TextView
            android:id="@+id/text_duty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/comp_type_extra"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/duty"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_company_duty"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/comp_type_extra"
            android:background="@android:color/white"
            android:drawSelectorOnTop="true"
            android:padding="10dp"
            android:prompt="@string/choose" />

        <TextView
            android:id="@+id/text_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/text_duty"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/company"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/input_company"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/text_duty"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:hint="@string/enter_company"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="@color/light_gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sex_extra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/text_company"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/gender"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layout_gender"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/text_company"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/button_male"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_boarder_before"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/male"
                android:textColor="@color/light_gray" />

            <Button
                android:id="@+id/button_female"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_boarder_before"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/female"
                android:textColor="@color/light_gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/age_extra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/sex_extra"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/birthday"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_birthday"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/sex_extra"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_toeic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/age_extra"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/toeic_score"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_toeic"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/age_extra"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:hint="@string/enter_toeic_score"
            android:inputType="number"
            android:maxLength="3"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="@color/light_gray" />

        <TextView
            android:id="@+id/text_certif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/text_toeic"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/certificate"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/certif_input"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/text_toeic"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:hint="@string/add"
            android:padding="10dp"
            android:textColorHint="@color/light_gray"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_certif"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:clickable="true"
                android:onClick="onClick"
                android:text="@string/skip"
                android:textColor="@color/mint" />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:clickable="true"
                android:onClick="onClick"
                android:text="@string/save"
                android:textColor="@color/mint" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>